[project]
name = "packages"
version = "0.1.0"
description = ""
authors = [
    {name = "Thijnmens",email = "thijnsmulders04@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "poetry-core (>=2.0.0,<3.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "flake8-docstrings (>=1.7.0,<2.0.0)",
    "flake8-bugbear (>=25.10.21,<26.0.0)",
    "flake8-import-order (>=0.19.2,<0.20.0)",
    "flake8-quotes (>=3.4.0,<4.0.0)",
    "flake8-variables-names (>=0.0.6,<0.0.7)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
